--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,5 @@
 [buildout]
 index = https://packages.lizard.net
-extends =
-    https://packages.lizard.net/kgs/latest.cfg
 find-links =
 prefer-final = true
 socket-timeout = 1
@@ -9,7 +7,7 @@ show-picked-versions = true
 extensions =
     mr.developer
 parts =
-#    sysegg
+    sysegg
     test
     omelette
     console_scripts
@@ -25,6 +23,34 @@ eggs =
 tile-store =
 
 # Reported by buildout.
+alabaster = 0.7.6
+Babel = 2.1.1
+collective.recipe.omelette = 0.16
+collective.recipe.sphinxbuilder = 0.8.2
+colorama = 0.3.3
+coverage = 4.0
+createcoverage = 1.4
+docutils = 0.12
+Jinja2 = 2.8
+MarkupSafe = 0.23
+mr.developer = 1.33
+nose = 1.3.7
+pbp.recipe.noserunner = 0.2.6
+pb.recipes.pydev = 0.4.5
+pep8 = 1.6.2
+Pillow = 2.9.0
+pyflakes = 1.0.0
+Pygments = 2.0.2
+pytz = 2015.6
+setuptools = 18.3.2
+six = 1.9.0
+snowballstemmer = 1.2.0
+Sphinx = 1.3.1
+sphinx-rtd-theme = 0.1.9
+syseggrecipe = 1.4
+zc.buildout = 2.4.3
+zc.recipe.egg = 2.0.2
+zest.releaser = 5.6
 
 
 [sources]
@@ -32,11 +58,13 @@ tile-store =
 # lizard-ui = git git@github.com:lizardsystem/nensskel.git
 
 
-# [sysegg]
-# # Add eggs here that are best handled through OS-level packages.
-# recipe = syseggrecipe
-# force-sysegg = true
-# eggs =
+[sysegg]
+# Add eggs here that are best handled through OS-level packages.
+recipe = syseggrecipe
+force-sysegg = true
+eggs =  
+    gdal
+    numpy
 
 
 [test]
